@@ -1,4 +1,4 @@
-.\" RCSid "$Id: rmtxop.1,v 1.13 2019/08/12 01:20:25 greg Exp $"
+.\" RCSid "$Id: rmtxop.1,v 1.14 2019/08/12 02:26:46 greg Exp $"
 .TH RMTXOP 1 7/8/97 RADIANCE
 .SH NAME
 rmtxop - concatenate, add, multiply, divide, transpose, scale, and convert matrices
@@ -120,6 +120,15 @@ of columns of the new matrix.
 In the case of addition, multiplication, and division,
 the number of rows and columns of the prior result and the
 new matrix must match, and will not be changed by the operation.
+.PP
+A final transpose or scaling/transform operation may be applied to
+the results by appending the
+.I \-t
+and
+.I \-s
+or
+.I \-c
+options after the last matrix on the command line.
 .PP
 Results are sent to the standard output.
 By default, the values will be written in the lowest resolution format
